@@ -1,5 +1,5 @@
 {
-  "count": 32,
+  "count": 33,
   "uniques": 11,
   "clones": [
     {
@@ -60,6 +60,11 @@
     {
       "timestamp": "2022-08-30T00:00:00Z",
       "count": 2,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-08-31T00:00:00Z",
+      "count": 1,
       "uniques": 1
     }
   ]
