@@ -1,3 +1,11 @@
+2022-08-31T08:23:21Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2962350684
+* notice: last 14d: unq all: 11 33
+* notice: prev accum: outdated-unq outdated-all / unq all: 557 2367 / 578 2399
+* notice: next accum: outdated-unq outdated-all / unq all: 557 2367 / 579 2400
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-08-31]
+
 2022-08-31T02:24:49Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/2960895116
 * notice: last 14d: unq all: 11 32
